syntax = "proto3";
option csharp_namespace = "ProductGrpc";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
  rpc CheckStock (CheckStockRequest) returns (CheckStockResponse);
  rpc ReduceStock (ReduceStockRequest) returns (ReduceStockResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message GetProductRequest {
  int32 id = 1;
}

message GetProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  int32 stock = 5;
  string category = 6;
}

message CheckStockRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  bool isAvailable = 1;
}

message ReduceStockRequest {
  int32 productId = 1;
  int32 quantity = 2;
}

message ReduceStockResponse {
  bool success = 1;
}

message ListProductsRequest {
  string category = 1;
  string sortBy = 2; // e.g. "price_asc", "price_desc"
  int32 page = 3;
  int32 pageSize = 4;
}

message ProductSummary {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  string category = 5;
}

message ListProductsResponse {
  repeated ProductSummary products = 1;
  int32 totalProducts = 2;
}